[package]
name = "complex-enum-macros"
version = "0.2.3"
edition = "2021"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
description = "Convert enums with non-unit variants to privitives and back"
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/complex-enum-macros"
readme = "README.md"
keywords = ["enum", "macros", "proc-macros"]
categories = ["development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/complex-enum-macros/"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
